classDiagram
    %% ==================== TYPES & STRUCTS ====================
    class PilotInput {
        float stick_roll
        float stick_pitch
        float rudder
        float throttle_input
        bool engines_on
        bool engine_ready
        bool landing_mode
    }

    class ControlSurfaces {
        float stabilator_deflection
        float flaperon_deflection
        float rudder_deflection
        float leading_edge_flap
        float thrust_normalized
    }

    class FlightState {
        float roll
        float pitch
        float yaw
        float roll_rate
        float pitch_rate
        float yaw_rate
        float u
        float v
        float w
        float alpha
        float beta
        float x
        float z
        float altitude
        FBWMode mode
        ProtectionStatus protections
        bool system_active
        bool landing_mode
    }

    class ProtectionStatus {
        bool alpha_floor
        bool overspeed
        bool high_altitude
        bool terrain_avoidance
        bool bank_angle_limit
        bool load_factor_limit
    }

    %% ==================== CONTROL LAWS ====================
    class FlightControlLaw {
        -OuterLoopState m_outer
        -ProtectionStatus m_prot
        -float m_pitch_integrator
        -bool m_outer_loop_engaged
        +compute(PilotInput PilotInput, FlightState FlightState, dt) ControlSurfaces
        +evaluate_mode(FlightState FlightState) FBWMode
        +protection_status() ProtectionStatus
        -normal_law(PilotInput PilotInput, FlightState FlightState, dt) ControlSurfaces
        -alternate_law(PilotInput PilotInput) ControlSurfaces
        -direct_law(PilotInput PilotInput) ControlSurfaces
        -compute_outer_loop(FlightState FlightState, dt) void*
        -compute_sas(FlightState FlightState) SASOutput*
        -apply_protections(ControlSurfaces ControlSurfaces, FlightState FlightState, PilotInput PilotInput) void
    }

    class SASOutput {
        float delta_ele
        float delta_ail
        float delta_rud
    }

    class OuterLoopState {
        float phi_ref
        float theta_ref
        float phi_error
        float phi_integral
        float theta_error
        float theta_integral
        float p_cmd
        float q_cmd
    }

    %% ==================== FCC ====================
    class FlightControlComputer {
        -FlightControlLaw m_law
        -FlightState m_state
        -ActuatorState m_actuator
        -bool m_terrain_recovery_active
        -bool m_high_alt_recovery_active
        -bool m_bank_recovery_active
        +step(PilotInput PilotInput, dt) void
        +get_state() FlightState
        +set_initial_state(FlightState FlightState) void
        +debug_print() void
        -update_actuators(ControlSurfaces ControlSurfaces, dt) void*
        -F16AeroFM() static void*
    }

    class ActuatorState {
        float ele
        float ail
        float rud
        float lef
        float thr
    }

    %% ==================== AERO DATA ====================
    class F16AeroData {
        <<library>>
        +ALPHA1[] float
        +ALPHA2[] float
        +BETA1[] float
        +DH1[] float
        +DH2[] float
        +TBL_Cx[] float
        +TBL_Cz[] float
        +TBL_Cm[] float
        +TBL_Cy[] float
        +TBL_Cn[] float
        +TBL_Cl[] float
        +.... (38 other tables)
        +aero_Cx() static float
        +aero_Cz() static float
        +aero_Cm() static float
        +aero_Cy() static float
        +aero_Cn() static float
        +aero_Cl() static float
        +aero_Cxq() static float
        +aero_Czq() static float
        +.... (stability derivatives)
        +interp1() static float*
        +interp2() static float*
        +interp3() static float*
    }

    %% ==================== RELATIONSHIPS ====================
    FlightControlComputer --> FlightControlLaw : uses
    FlightControlComputer --> ActuatorState : contains
    FlightControlComputer --> FlightState : maintains
    FlightControlComputer --> F16AeroData : calls (static)

    FlightControlLaw --> OuterLoopState : contains
    FlightControlLaw --> SASOutput : returns
    FlightControlLaw --> ProtectionStatus : maintains
    FlightControlLaw --> PilotInput : reads
    FlightControlLaw --> FlightState : reads

    FlightControlComputer --> PilotInput : reads
    FlightControlComputer --> ControlSurfaces : generates